# LearnRL

./: .coverage  .coveragerc  .gitignore  .pylintrc  .readthedocs.yml  Agent.py  CONTRIBUTING.md  COPYING.LESSER  LICENCE  MANIFEST.in  README.md  README.rst  bandit.yml  core.py  core_test.py  coverage_score.py  main.py  main_test.py  pylint_score.py  pypi-readme.rst  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  utils.py
.github/workflows/: python-coverage.yml  python-pylint.yml  python-pypi.yml  python-tests.yml  pythonpackage.yml  pythonpublish.yml
agents/: __init__.py  agent.py
agents/basic/: agent.py  control.py  evaluation.py
agents/basic/evaluation/: __init__.py  monteCarlo.py
docs/: Makefile  README.rst  agent_parts.rst  agents.rst  callbacks.rst  conf.py  core.rst  crosses_and_noughts.rst  environments.rst  index.rst  learnrl.agents.rst  learnrl.agents.table.rst  learnrl.core.rst  learnrl.environments.rst  learnrl.environments.single_agents.random_crosses_and_noughts.rst  learnrl.environments.single_agents.random_nim.rst  learnrl.rst  make.bat  nim.rst  random_crosses_and_noughts.rst  requirements.txt
docs/_static/styles/: custom.css
docs/agent_parts/: control.rst  estimator.rst  evaluation.rst
docs/agents/: standard.rst
docs/environments/: crosses_and_noughts.rst  nim.rst  random_crosses_and_noughts.rst  random_nim.rst
docs/source/: conf.py  index.rst  learnrl.agents.rst  learnrl.agents.table.rst  learnrl.core.rst  learnrl.environments.multi_agents.crosses_and_noughts.rst  learnrl.environments.multi_agents.nim.rst  learnrl.environments.multi_agents.rst  learnrl.environments.rst  learnrl.environments.single_agents.rst  modules.rst  nim.rst  random_nim.rst
environements/: __init__.py
environements/nim/: game.py
envs/: __init__.py
envs/multi_agents_envs/: __init__.py
envs/multi_agents_envs/crosses_and_noughts/: __init__.py  game.py
envs/single_agents_envs/: __init__.py
envs/single_agents_envs/basenim/: game.py
envs/single_agents_envs/random_crosses_and_noughts/: __init__.py  game.py
envs/single_agents_envs/random_nim/: __init__.py  (+1 more)
examples/: cartpole.py
examples/cartpole/: README.md  cartpole.py
learnrl/: __init__.py  agent.py  callbacks.py  control.py  core.py  envs.py  estimator.py  evaluation.py  memory.py  playground.py
learnrl/agent_parts/: control.py  estimator.py  evaluation.py
learnrl/agents/: __init__.py
learnrl/callbacks/: __init__.py  callback.py  logger.py  logging_callback.py  tensorboard.py  tensorflow.py  wandb.py
learnrl/environments/: __init__.py
learnrl/estimators/: __init__.py  estimator.py  keras.py  numpy.py  tensorflow.py
src/benchmarks/: __init__.py  agent.py  envs.py  playground.py
tests/: conftest.py  test_agents.py
tests/tests_agent_parts/: __init_.py  test_control.py  test_estimator.py  test_evaluation.py
tests/tests_agents/: test_memory.py
tests/tests_callbacks/: test_logging.py  test_tensorboard.py  test_tensorflow.py  test_wandb.py
tests/tests_core/: test_memory.py
tests/unit/: test_agent.py  test_control.py  test_envs.py  test_evaluation.py  test_playground.py
(+48 files in other folders)
