[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]

[project]
name = "benchmarks"
description = "Evaluate agents and environments in reinforcement learning."

dynamic = ["version", "readme", "dependencies"]
license = { text = "GNU General Public License v3 or later (GPLv3+)" }
requires-python = ">=3.7"
authors = [
    { name = "Mathïs Fédérico" },
    { name = "Mathïs Fédérico", email = "mathfederico@gmail.com" },
]
keywords = [
    "reinforcement",
    "learning",
    "agents",
    "environments",
    "gym",
    "logging",
]



[project.urls]
Source = "https://github.com/MathisFederico/LearnRL"

[tool.setuptools]
license-files = ['LICEN[CS]E*', 'COPYING*', 'NOTICE*', 'AUTHORS*']

[tool.setuptools.dynamic]
readme = { file = ["README.rst"] }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools_scm]
write_to = "src/benchmarks/__version__.py"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]
log_level = "DEBUG"

[tool.coverage.run]
source = ["src"]

[tool.mypy]
files = "src"
plugins = "numpy.typing.mypy_plugin"
check_untyped_defs = false
disallow_any_generics = false
disallow_incomplete_defs = true
no_implicit_optional = false
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
